Use URL instead of URI for accessible resources